--- a/SampleAppAspNetCore/SampleAppAspNetCore/appsettings.json
+++ b/SampleAppAspNetCore/SampleAppAspNetCore/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ApplicationInsights": {
+    "InstrumentationKey": "putikeyhere",
+    "CustomRoleNameOverride" :  "putrolenamehere"
+  },
   "AllowedHosts": "*"
 }
